--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <version>1.10.2</version>
             <scope>import</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.5</version>
+        </dependency>
+
     </dependencies>
 
 </project>
